--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ t {
     width: 60%;
     height: 100%;
     right: 0px;
-    background-image: url("simplify-ui.png");
+    background-image: url("");
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
